MLE-12345 Restricting vector test to 12